Update tracing classes and updates to TimeInterval tests